--- a/minesweeper.css
+++ b/minesweeper.css
@@ -14,6 +14,15 @@ div#gameContainer {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+    padding-left: 6em;
+    padding-right: 6em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    background-color: #c0c0c0;  /* minesweeper gray */
+
+    box-sizing: border-box;
+    border-style: solid;
+    border-width: 10px;
 }
 
 
@@ -21,7 +30,6 @@ div#gameContainer {
     font-family: 'MinesweeperFont';
     src: url('fonts/minesweeper.ttf');
 }
-
 
 div.game-row {
     display: table-row;
@@ -56,7 +64,7 @@ div.game-cell.secret {
     border-color: white #7a7a7a #7a7a7a white;
 }
 
-div#gameContainer.active-game div.game-cell.secret:active {
+div#minesweeperContainer.active-game div.game-cell.secret:active {
     border: none;
 }
 
