--- a/minesweeper.css
+++ b/minesweeper.css
@@ -37,6 +37,7 @@ div#scoreContainer {
     border-style: solid;
     border-width: 3px;
     border-color: #7f7f7f #ffffff #ffffff #7f7f7f;
+    margin-bottom: 10px;
 }
 
 div.scoreboard {
