add (useless) autosolve button, add impl of queue, add start of solver script

--- a/minesweeper.css
+++ b/minesweeper.css
@@ -91,7 +91,7 @@ div#timeBoard {
 
 /* START SETTINGS POPUP */
 div.popup {
-    visibility: hidden;
+    display: none;
 }
 div.popup.active {
     display: inline-block;
