--- a/minesweeper.css
+++ b/minesweeper.css
@@ -38,7 +38,7 @@ div#buttonsContainer {
 }
 
 div#buttonsContainer>button,
-div.popup-container button {
+div.popup-container button:not(.collapsible-control) {
     min-width: 110px;
     width: fit-content;
     padding: 5px;
@@ -50,11 +50,11 @@ div.popup-container button {
     border-width: 3px;
     border-color: #ffffff #7a7a7a #7a7a7a #ffffff;
 
-    font-size: large;
+    font-size: medium;
 }
 
 div#buttonsContainer>button:active,
-div#popup-container button:active {
+div.popup-container button:active:not(.collapsible-control) {
     border-style: solid;
     border-width: 3px;
     border-color: #7a7a7a #ffffff #ffffff #7a7a7a;
@@ -149,6 +149,43 @@ div.popup-container {
     margin-right: 2em;
 }
 
+div.popup-container button.collapsible-control {
+    font-size: 1em;
+    padding: 1em;
+    width: 100%;
+    color: black;
+    background-color: #bfbfbf;
+    cursor: pointer;
+    text-align: left;
+    border: none;
+    outline: none;
+}
+
+div.popup-container button.collapsible-control:hover {
+    background-color: #dfdfdf;
+}
+
+div.popup-container .collapsible {
+    max-height: 0;
+    height: fit-content;
+    overflow: hidden;
+    transition: max-height 0.4s linear;
+}
+
+div.popup-container .collapsible.collapsible-show {
+    max-height: 20em;
+}
+
+button.collapsible-control:before {
+    content: '\02795'; /* Unicode for plus sign (+) */
+    font-size: 0.8em;
+    color: black;
+    margin-right: 1em;
+}
+
+button.collapsible-control.collapsible-open:before {
+    content: '\2796'; /* Unicode for minus sign (-) */
+}
 /* END SETTINGS POPUP */
 
 
