make background gray, add Clear Grid button

--- a/life.css
+++ b/life.css
@@ -1,3 +1,9 @@
+body {
+    min-width: fit-content;
+    min-height: fit-content;
+    background-color: #c0c0c0;
+}
+
 canvas#lifeCanvas {
     border-color: black;
     border-style: solid;
