--- a/life.css
+++ b/life.css
@@ -14,6 +14,6 @@ canvas#lifeCanvas {
     background-image: url("lifeGrid.svg");
 }
 
-div#inputContainer button {
+div#inputContainer * {
     font-size: large;
 }
