--- a/clickable.css
+++ b/clickable.css
@@ -1,4 +1,5 @@
 div#clickableContainer {
+    width: max-content; /* For Firefox */
     width: fit-content;
     margin: auto;
     padding-bottom: 20px;
@@ -6,6 +7,7 @@ div#clickableContainer {
 
 button.clickable {
     min-width: 110px;
+    width: max-content; /* For Firefox */
     width: fit-content;
     padding: 5px;
     margin: 5px 16px;
