--- a/general.css
+++ b/general.css
@@ -10,6 +10,7 @@ body {
     text-align: center !important;
 }
 .center {
+    width: max-content; /* For Firefox */
     width: fit-content;
     margin: auto;
 }
