--- a/minesweeper.css
+++ b/minesweeper.css
@@ -1,8 +1,6 @@
 /* Colors from https://upload.wikimedia.org/wikipedia/commons/1/1e/Minesweeper_Game_Most_Common_Setup.png */
 
 body {
-    min-width: fit-content;
-    min-height: fit-content;
     background-color: #c0c0c0;
 }
 
@@ -41,6 +39,7 @@ div#scoreContainer {
 div.scoreboard {
     display: inline-block;
     vertical-align: middle;
+    width: max-content; /* For Firefox */
     width: fit-content;
     padding: 0.12em 0px 0.12em 0.12em;
     margin: 8px;
@@ -90,8 +89,11 @@ div.popup.active {
     bottom: 0;
     left: 0;
 
+    height: max-content; /* For Firefox */
     height: fit-content;
+    min-height: max-content; /* For Firefox */
     min-height: fit-content;
+    width: max-content; /* For Firefox */
     width: fit-content;
     max-width: 80%;
     padding: 2%;
@@ -135,6 +137,7 @@ div.popup-container button.collapsible-control:hover {
 
 div.popup-container .collapsible {
     max-height: 0;
+    height: max-content; /* For Firefox */
     height: fit-content;
     overflow: hidden;
     transition: max-height 0.4s linear;
