--- a/minesweeper.css
+++ b/minesweeper.css
@@ -184,12 +184,12 @@ div.game-cell {
     /* minesweeper gray */
 
     box-sizing: border-box;
-    width: 25px;
-    min-width: 25px;
-    max-width: 25px;
-    height: 25px;
-    min-height: 25px;
-    max-height: 25px;
+    width: 1.65em;
+    min-width: 1.65em;
+    max-width: 1.65em;
+    height: 1.65em;
+    min-height: 1.65em;
+    max-height: 1.65em;
 
     font-family: 'MinesweeperFont', 'Courier New', Courier, monospace;
     font-size: 1em;
@@ -231,8 +231,9 @@ div.game-cell.mine {
     border-style: solid;
     border-width: 1px;
     border-color: #7f7f7f;
+
     padding: 0.1em 0em 0em 0.1em;
-    font-size: 0.95em;
+    font-size: 0.94em;
 }
 
 div.game-cell.mine.clicked {
