--- a/minesweeper.css
+++ b/minesweeper.css
@@ -89,14 +89,16 @@ div.popup.active {
     bottom: 0;
     left: 0;
 
-    height: max-content; /* For Firefox */
+    height: min-content; /* For Firefox */
     height: fit-content;
-    min-height: max-content; /* For Firefox */
-    min-height: fit-content;
+    max-height: 75%;
     width: max-content; /* For Firefox */
     width: fit-content;
     max-width: 80%;
-    padding: 2%;
+
+    overflow-y: auto;
+
+    padding: 3em;
 
     background-color: #d0d0d0;
     border-style: solid;
