create div to follow mouse

--- a/life.css
+++ b/life.css
@@ -15,3 +15,17 @@ canvas#lifeCanvas {
 div#inputContainer * {
     font-size: large;
 }
+
+
+div#follower {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 128px;
+    height: 128px;
+}
+
+
+div#follower.glider {
+    background-image: url("lifeGlider.svg");
+}
