--- a/minesweeper.css
+++ b/minesweeper.css
@@ -279,3 +279,14 @@ div.game-cell.value8 {
 
 /* END NUMBER COLORS */
 /* END MINESWEEPER GAME */
+
+div#leftToolbar {
+    position: fixed;
+    left: 0px;
+}
+
+div#leftToolbar > button.clickable {
+    margin-left: 0px;
+    margin-bottom: 1.5em;
+    border-left-width: 0px;
+}
