change collapsible control color to be different from background

--- a/collapsible.css
+++ b/collapsible.css
@@ -3,7 +3,7 @@ button.collapsible-control {
     padding: 1em;
     width: 100%;
     color: black;
-    background-color: #bfbfbf;
+    background-color: #b2b2b2;
     cursor: pointer;
     text-align: left;
     border: none;
