use new pageTitle id

--- a/general.css
+++ b/general.css
@@ -36,6 +36,10 @@ div#footerContainer h3 {
     text-align: center;
 }
 
+#pageTitle {
+    text-align: center;
+}
+
 @media only screen and (max-width: 600px) {
     .smallWindowHide {
         display: none !important;
